# SceneForge

./: .dockerignore  .env.example  .gitignore  Dockerfile  EXECUTION_PLAN.md  README.md  pyproject.toml  railway.toml
.github/workflows/: build-worker.yml  ci.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/site/: getting-started.html  index.html  pricing.html  style.css
frontend/src/: App.test.tsx  App.tsx  DemoContext.tsx  SiteAuth.tsx  api.ts  demo.ts  hooks.ts  main.tsx  styles.css  types.ts
frontend/src/components/: JobBanner.tsx  Lightbox.tsx  toast.tsx
frontend/src/pages/: HistoryView.tsx  ProfileList.tsx  ProjectBoard.tsx  ProjectList.tsx  Settings.tsx  TakeCompare.tsx
runpod-worker/: Dockerfile  README.md  handler.py  pipelines.py  requirements.txt  test_input.json
site/: architecture.html  getting-started.html  index.html  pricing.html
src/sceneforge/: breakdown.py  cli.py  config.py  ops.py  profile.py  project.py  prompts.py  stitch.py  util.py  web.py
src/sceneforge/backends/: __init__.py  base.py  fake.py  (+6 more)
tests/: test_api.py  test_batch_clips.py  test_batch_scenes.py  test_breakdown.py  test_captions.py  test_cli.py  test_director.py  test_ops_regenerate.py  test_platform_export.py  test_produce.py  test_project.py  test_prompt_enhance.py  test_prompts.py  test_references.py  test_runpod_backend.py  test_sequence.py  test_shot_list.py  test_shot_types.py  test_smart_routing.py  test_stitch.py  test_takes_export.py  test_templates.py  test_upgrade.py  test_web.py
(+4 files in other folders)
