[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sceneforge"
version = "0.1.0"
description = "Local-first AI video production: concept to stitched short-form video with consistent visual style"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "python-dotenv>=1.0",
    "openai>=1.30.0",
    "together>=1.3.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
local = [
    "torch>=2.4",
    "diffusers>=0.30",
    "pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/ahmedkhaledmohamed/SceneForge"

[project.scripts]
sceneforge = "sceneforge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
